Bug 74529 - pulseaudio crashes when sliding Echo-Cancel Source Stream volume on pavucontrol
Summary: pulseaudio crashes when sliding Echo-Cancel Source Stream volume on pavucontrol
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-04 18:59 UTC by Vasco Almeida
Modified: 2014-02-04 20:00 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
stack trace (6.41 KB, text/plain)
2014-02-04 18:59 UTC, Vasco Almeida
Details
pulseaudio -vvvvv (226.98 KB, text/plain)
2014-02-04 19:02 UTC, Vasco Almeida
Details

Description Vasco Almeida 2014-02-04 18:59:19 UTC
Created attachment 93402 [details]
stack trace

pulseaudio 4.0 on Sabayon Linux

1.Start pulseaudio
2.run env PULSE_PROP_filter.want=echo-cancel mumble
3. pavucontrol: move the volume slider of Echo-Cancel Source Stream and pulseaudio crashes.

The following way, I can move the volume slider of that stream and use echo-cancel on mumble:
pactl load-module module-echo-cancel use_volume_sharing=no
Comment 1 Vasco Almeida 2014-02-04 19:02:57 UTC
Created attachment 93403 [details]
pulseaudio -vvvvv

look at the last line
Comment 2 Tanu Kaskinen 2014-02-04 20:00:29 UTC
Thank you for the good bug report! This should be now fixed: http://cgit.freedesktop.org/pulseaudio/pulseaudio/commit/?id=7297feb50bde72f8c148899a3fbec0c9cd13a8e4

Note that if you have volume sharing enabled, you can't control the "Echo-Cancel Source Stream" volume.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.